# internal/application/api/health/controller.go
@@ -24,7 +24,7 @@ func NewHealthController() HealthController {
 //	@Accept			json
 //	@Produce		json
 //	@Success		200	{object}	map[string]string	"Successful response"
-//	@Router			/api/v1/ping [get]
+//	@Router			/api/v1/health [get]
 func (c HealthController) Health(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, gin.H{
 		"message": c.msg,
